Workaround for z-index penthouse issue

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -591,7 +591,7 @@ ul li {
     position: fixed;
     top: 40px;
     left: 2%;
-    z-index: 99999 !important;
+    z-index: 2;
     font-family: 'Open Sans Condensed', sans-serif;
     text-transform: uppercase;
     font-size: 1.5rem;
@@ -599,6 +599,12 @@ ul li {
     font-weight: bold;
 
     transition: opacity 0.4s ease-in-out;
+
+    // Workaround for penthouse issue #130
+    // https://github.com/pocketjoso/penthouse/issues/130
+    &:after {
+      z-index: 1;
+    }
 }
 a.fn-item {
     display: block;
